# vpn_gui_clean

./: .gitignore  CMakeLists.txt  LICENSE  README.md
VPN_GUI_OpenGL/: VPN_GUI_OpenGL.sln  VPN_GUI_OpenGL.vcxproj  VPN_GUI_OpenGL.vcxproj.filters  imgui.ini
shaders/: fragment.glsl  vertex.glsl
src/: glad.c  main.cpp  process_runner.h  vpn_logic.h
src/core/: ProcessRunner.cpp  ProcessRunner.h
src/ui/: Panels.cpp  Panels.h
src/vpn/: OpenVpnRunner.cpp  OpenVpnRunner.h  ProcessOptions.h  ProcessRunner.cpp  ProcessRunner.h
